--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Portfolio of Muhammad Hamza Asif. MEAN stack developer",
   "main": "index.js",
   "scripts": {
-    "sass": "node-sass -w SCSS/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "keywords": [],
   "author": "Muhammad Hamza Asif",
